--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.bg-image {
+  background-image: url("../public/Blob.png");
+  background-size: contain;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
