--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,20 @@ body {
   height: 100vh;
   width: 100%;
 }
+
+.home-page {
+  background-image: url("/Blob.png");
+  background-size: contain;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+  .text-font {
+    font-size: 11px;
+  }
+  .sign-in-text {
+    margin-right: 20px;
+  }
+}
